--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://timhsi.github.io/Movie-Directory/",
+  "scripts":{
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+            } 
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -34,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
+  
 }
